<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/orange"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormCadastro">

    <TextView
        android:id="@+id/textView"
        style="@style/ViewTitle"
        android:text="@string/TextCadastro"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <View
        android:id="@+id/imageView2"
        style="@style/FundoTriangulo"
        android:layout_height="450dp"
        android:layout_width="match_parent"
        android:alpha="0.4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view"
        style="@style/ElementosContainer"
        android:layout_width="349dp"
        android:layout_height="410dp"
        android:background="@drawable/container_cores_elemento"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText4"
        style="@style/EditText"
        android:hint="@string/nome"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <ImageView
        style="@style/Icons_p"
        android:src="@drawable/boneco"
        app:layout_constraintBottom_toBottomOf="@+id/editText4"
        app:layout_constraintEnd_toEndOf="@+id/editText4"
        app:layout_constraintTop_toTopOf="@+id/editText4" />


    <EditText
        android:id="@+id/editText"
        style="@style/EditText"
        android:hint="@string/nome_usuario"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />


    <ImageView
        android:id="@+id/imageView10"
        style="@style/Icons_p"
        android:src="@drawable/boneco2"
        app:layout_constraintBottom_toBottomOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="@+id/editText"
        app:layout_constraintTop_toTopOf="@+id/editText" />

    <EditText
        android:id="@+id/editText3"
        style="@style/EditText"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <ImageView
        android:id="@+id/imageView3"
        style="@style/Icons_p"
        android:src="@drawable/email"
        app:layout_constraintBottom_toBottomOf="@+id/editText3"
        app:layout_constraintEnd_toEndOf="@+id/editText3"
        app:layout_constraintTop_toTopOf="@+id/editText3" />


    <EditText
        android:id="@+id/editText2"
        style="@style/EditText"
        android:hint="@string/senha"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <ImageView
        android:id="@+id/imageView9"
        style="@style/Icons_p"
        android:src="@drawable/olho"
        app:layout_constraintBottom_toBottomOf="@+id/editText2"
        app:layout_constraintEnd_toEndOf="@+id/editText2"
        app:layout_constraintTop_toTopOf="@+id/editText2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:text="@string/termos"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/textView4"
        style="@style/Link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/termos2"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLogin"
        style="@style/ButtonPag"
        android:text="@string/textCadastre"
        android:onClick="passarTelaCat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView2"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contemConta"
        android:layout_marginStart="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <TextView
        style="@style/Link"
        android:id="@+id/login"
        android:text="@string/linkLogin"
        android:onClick="passarTelaL"
        android:layout_marginStart="2dp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
