<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/orange"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormLogin">

    <TextView
        android:id="@+id/textView"
        style="@style/ViewTitle"
        android:text="@string/TextLogin"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/imageView2"
        style="@style/FundoTriangulo"
        android:layout_height="450dp"
        android:alpha="0.4"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <View
        android:id="@+id/view"
        style="@style/ElementosContainer"
        android:layout_width="349dp"
        android:layout_height="280dp"
        android:background="@drawable/container_cores_elemento"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        style="@style/EditText"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        android:hint="@string/email"
        />

    <ImageView
        android:id="@+id/imageView3"
        style="@style/Icons_p"
        android:src="@drawable/email"
        app:layout_constraintBottom_toBottomOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="@+id/editText"
        app:layout_constraintTop_toTopOf="@+id/editText" />

    <EditText
        android:id="@+id/editText2"
        style="@style/EditText"
        android:layout_marginTop="40dp"
        android:hint="@string/senha"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <ImageView
        android:id="@+id/imageView9"
        style="@style/Icons_p"
        android:src="@drawable/olho"
        app:layout_constraintBottom_toBottomOf="@+id/editText2"
        app:layout_constraintEnd_toEndOf="@+id/editText2"
        app:layout_constraintTop_toTopOf="@+id/editText2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:text="@string/esque_senha"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLogin"
        style="@style/ButtonPag"
        android:text="@string/TextLogin"
        android:onClick="passarTelaCat"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/notConta"
        android:layout_marginEnd="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <TextView
        style="@style/Link"
        android:id="@+id/cadastra"
        android:text="@string/linkCadastra"
        android:onClick="passarTelaEsc"
        android:layout_marginStart="2dp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
        />

    <ImageView
        style="@style/Icons_redes"
        android:id="@+id/imageView4"
        android:src="@drawable/insta"
        app:layout_constraintEnd_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageView6"
        style="@style/Icons_redes"
        android:src="@drawable/face"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        style="@style/Icons_redes"
        android:id="@+id/imageView5"
        android:src="@drawable/google"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/redes"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />


</androidx.constraintlayout.widget.ConstraintLayout>