<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/orange"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EscolhaTipoConta">

    <View
        android:id="@+id/view2"
        style="@style/QuadradoBrancoSB"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:src="@drawable/setavoltar"
        android:onClick="fecharJanela"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        style="@style/LetraBrancaG"
        android:layout_marginTop="30dp"
        android:text="@string/Tipoconta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/textView6"
        style="@style/LetraBrancaG"
        android:fontFamily="sans-serif-black"
        android:text="@string/Tipoconta2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView5" />

    <View
        android:id="@+id/view3"
        style="@style/circulo"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginTop="80dp"
        android:alpha="0.4"
        android:onClick="passarTelaC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/pena"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <TextView
        android:id="@+id/textView7"
        style="@style/LetraBrancaG"
        android:fontFamily="sans-serif-black"
        android:text="@string/TipoAut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />


    <View
        android:id="@+id/view4"
        style="@style/circulo"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginTop="90dp"
        android:alpha="0.4"
        android:onClick="passarTelaC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/livrog"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/view4" />

    <TextView
        android:id="@+id/textView8"
        style="@style/LetraBrancaG"
        android:fontFamily="sans-serif-black"
        android:text="@string/TipoLei"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4" />


</androidx.constraintlayout.widget.ConstraintLayout>